{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "206ebda4-dd63-4d35-a91d-1aee79f62c07",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2ed630c6-a5e7-4b33-9821-4628f349e5a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "062a40cb-45ad-46e0-94cc-b0a99269e47e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "9b739f51-a030-49a8-9e11-fe50e8fb270e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "425ed431-eafa-4100-ae37-51ae0eb038be",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c6aedadb-93ac-4198-9c3c-b23a3de50f3a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c45fba37-a57c-40eb-a4db-29b4df4e7d72",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b924a5a8-ea53-41a1-be04-2fde3b7f6616",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "33619638-65a8-4d0b-b03b-29c3c598840c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "56b518ee-e81b-44c9-87b8-0e6b23bfc487",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61aefc7c-bc3e-497a-bc5f-e06231e96c3a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}